--- a/style.css
+++ b/style.css
@@ -1,12 +1,20 @@
 body {
-    background: grey;
+    background: yellow;
 
 }
 
 .white-font {
-    color: white;
+    color: Green;
 }
 
-#red-font {
+.white-font{
     color: red;
+}
+
+#blue-font {
+    color: blue;
+}
+
+#blue-font {
+    color: purple;
 }
